db/main.tf
provider "aws" {
  region = var.region
}

data "aws_availability_zones" "available" {}

resource "random_string" "unique_suffix" {
  length  = 6
  special = false
  upper   = false
}

module "vpc" {
  source  = "terraform-aws-modules/vpc/aws"
  version = "2.77.0"

  name                 = "iot"
  cidr                 = "10.0.0.0/16"
  azs                  = data.aws_availability_zones.available.names
  public_subnets       = ["10.0.4.0/24", "10.0.5.0/24", "10.0.6.0/24"]
  enable_dns_hostnames = true
  enable_dns_support   = true
}

resource "aws_db_subnet_group" "iot" {
  name       = "iot-${random_string.unique_suffix.result}"
  subnet_ids = module.vpc.public_subnets

  tags = {
    Name = "IoT"
  }
}

resource "aws_security_group" "rds" {
  name   = "iot_rds"
  vpc_id = module.vpc.vpc_id

  ingress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 5432
    to_port     = 5432
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "iot_rds"
  }
}

resource "aws_db_parameter_group" "iot" {
  name   = "iot-${random_string.unique_suffix.result}"
  family = "postgres15"

  parameter {
    name  = "log_connections"
    value = "1"
  }
}

resource "aws_db_instance" "iot" {
  identifier             = "iot"
  instance_class         = "db.t3.micro"
  allocated_storage      = 5
  engine                 = "postgres"
  engine_version         = "15.3"
  username               = "edu"
  password               = var.db_password
  db_subnet_group_name   = aws_db_subnet_group.iot.name
  vpc_security_group_ids = [aws_security_group.rds.id]
  parameter_group_name   = aws_db_parameter_group.iot.name
  publicly_accessible    = true
  skip_final_snapshot    = true
}
